Use TA CRD only if it's available
This way we won't break installations which don't have the new CRD yet
for whatever reason.

--- a/.chloggen/feat_enable-ta-crd.yaml
+++ b/.chloggen/feat_enable-ta-crd.yaml
@@ -13,4 +13,4 @@ issues: [2422]
 # (Optional) One or more lines of additional information to render under the primary note.
 # These lines will be padded with 2 spaces and then inserted directly into the document.
 # Use pipe (|) for multiline entries.
-subtext:
+subtext: See the [CRD changelog](./docs/crd-changelog.md) for more information.
