--- a/bundle/community/manifests/opentelemetry.io_instrumentations.yaml
+++ b/bundle/community/manifests/opentelemetry.io_instrumentations.yaml
@@ -182,6 +182,8 @@ spec:
                     type: array
                   image:
                     type: string
+                  imagePullPolicy:
+                    type: string
                   resourceRequirements:
                     properties:
                       claims:
@@ -410,6 +412,8 @@ spec:
                       type: object
                     type: array
                   image:
+                    type: string
+                  imagePullPolicy:
                     type: string
                   resourceRequirements:
                     properties:
@@ -717,6 +721,8 @@ spec:
                     type: array
                   image:
                     type: string
+                  imagePullPolicy:
+                    type: string
                   resourceRequirements:
                     properties:
                       claims:
@@ -869,6 +875,8 @@ spec:
                     pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                     x-kubernetes-int-or-string: true
                 type: object
+              imagePullPolicy:
+                type: string
               java:
                 properties:
                   env:
@@ -950,6 +958,8 @@ spec:
                       type: object
                     type: array
                   image:
+                    type: string
+                  imagePullPolicy:
                     type: string
                   resources:
                     properties:
@@ -1241,6 +1251,8 @@ spec:
                     type: array
                   image:
                     type: string
+                  imagePullPolicy:
+                    type: string
                   resourceRequirements:
                     properties:
                       claims:
@@ -1462,6 +1474,8 @@ spec:
                       type: object
                     type: array
                   image:
+                    type: string
+                  imagePullPolicy:
                     type: string
                   resourceRequirements:
                     properties:
@@ -1697,6 +1711,8 @@ spec:
                       type: object
                     type: array
                   image:
+                    type: string
+                  imagePullPolicy:
                     type: string
                   resourceRequirements:
                     properties:
