[autoinstrumentation] remove dependency on busybox, use native cp

--- a/autoinstrumentation/apache-httpd/Dockerfile
+++ b/autoinstrumentation/apache-httpd/Dockerfile
@@ -1,7 +1,3 @@
-
-############################
-# STEP 1 download the webserver agent 
-############################
 FROM alpine:latest as agent
 
 ARG version
@@ -13,14 +9,13 @@ RUN mkdir agent
 RUN wget -c https://github.com/open-telemetry/opentelemetry-cpp-contrib/releases/download/webserver%2Fv$version/opentelemetry-webserver-sdk-x64-linux.tgz
 RUN unzip -p opentelemetry-webserver-sdk-x64-linux.tgz | tar -zx -C agent
 
-############################
-# STEP 2 download the webserver agent 
-############################
-FROM alpine:latest
-
-COPY --from=agent /opt/opentelemetry/agent/opentelemetry-webserver-sdk /opt/opentelemetry
-
 RUN chmod 775 -R /opt/opentelemetry/
 RUN chmod a+w /opt/opentelemetry/logs
 
-CMD ["cat", "Just delivering the Opentelemetry Apache/Nginx agent"]
+FROM ghcr.io/open-telemetry/opentelemetry-operator/cp:1.0.0 AS cp
+
+FROM scratch
+
+COPY --from=cp /cp /usr/bin/cp
+
+COPY --from=agent /opt/opentelemetry/agent/opentelemetry-webserver-sdk /opt/opentelemetry
