--- a/.github/workflows/publish-autoinstrumentation-apache-httpd.yaml
+++ b/.github/workflows/publish-autoinstrumentation-apache-httpd.yaml
@@ -12,6 +12,11 @@ on:
       - 'autoinstrumentation/apache-httpd/**'
       - '.github/workflows/publish-autoinstrumentation-apache-httpd.yaml'
   workflow_dispatch:
+  workflow_run:
+    workflows: [ "Publish cp Auto-Instrumentation" ]
+    branches: [ main ]
+    types:
+      - completed
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -19,6 +24,7 @@ concurrency:
 
 jobs:
   publish:
+    if: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-22.04
 
     steps:
