--- a/renovate.json
+++ b/renovate.json
@@ -12,7 +12,7 @@
         "(^|/)\\.github/workflows/.+\\.ya?ml$"
       ],
       "matchStrings": [
-        "go-version: [\"']~(?<currentValue>.+)[\"'])"
+        "go-version: [\"']~(?<currentValue>.+)[\"']"
       ]
     },
     {
