--- a/autoinstrumentation/python/requirements.txt
+++ b/autoinstrumentation/python/requirements.txt
@@ -1,4 +1,9 @@
 opentelemetry-distro==0.51b0
+
+# We add an upper limit to urllib3 version else Python 3.8 support is dropped.
+# TODO: Update autoinstrumentation image builds to support all supported Python versions
+#       https://github.com/open-telemetry/opentelemetry-operator/issues/3712
+urllib3 < 2.3.0
 # We don't use the distro[otlp] option which automatically includes exporters since gRPC is not appropriate for
 # injected auto-instrumentation, where it has a strict dependency on the OS / Python version the artifact is built for.
 opentelemetry-exporter-otlp-proto-http==1.30.0
