--- a/config/crd/bases/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/config/crd/bases/opentelemetry.io_opentelemetrycollectors.yaml
@@ -7000,6 +7000,10 @@ spec:
                     type: array
                     x-kubernetes-list-type: atomic
                 type: object
+              podLabels:
+                additionalProperties:
+                  type: string
+                type: object
               podSecurityContext:
                 properties:
                   appArmorProfile:
