--- a/config/crd/bases/opentelemetry.io_targetallocators.yaml
+++ b/config/crd/bases/opentelemetry.io_targetallocators.yaml
@@ -2142,6 +2142,10 @@ spec:
                     type: array
                     x-kubernetes-list-type: atomic
                 type: object
+              podLabels:
+                additionalProperties:
+                  type: string
+                type: object
               podSecurityContext:
                 properties:
                   appArmorProfile:
