Update dep prometheus-operator to v0.80.1
Signed-off-by: Charlie Le <charlie_le@apple.com>

--- a/tests/e2e/smoke-targetallocator/00-assert.yaml
+++ b/tests/e2e/smoke-targetallocator/00-assert.yaml
@@ -38,6 +38,7 @@ data:
                         - PrometheusProto
                         - OpenMetricsText1.0.0
                         - OpenMetricsText0.0.1
+                        - PrometheusText1.0.0
                         - PrometheusText0.0.4
             target_allocator:
                 collector_id: ${POD_NAME}
