--- a/tests/e2e-ta-collector-mtls/ta-disabled/00-assert.yaml
+++ b/tests/e2e-ta-collector-mtls/ta-disabled/00-assert.yaml
@@ -22,6 +22,7 @@ data:
               - PrometheusProto
               - OpenMetricsText1.0.0
               - OpenMetricsText0.0.1
+              - PrometheusText1.0.0
               - PrometheusText0.0.4
           scrape_configs:
             - job_name: otel-collector
