--- a/tests/e2e/smoke-targetallocator/00-install.yaml
+++ b/tests/e2e/smoke-targetallocator/00-install.yaml
@@ -48,7 +48,7 @@ spec:
         config:
           global:
             scrape_interval: 30s
-            scrape_protocols: ['PrometheusProto','OpenMetricsText1.0.0','OpenMetricsText0.0.1','PrometheusText0.0.4']
+            scrape_protocols: ['PrometheusProto','OpenMetricsText1.0.0','OpenMetricsText0.0.1','PrometheusText1.0.0','PrometheusText0.0.4']
           scrape_configs:
             - job_name: 'otel-collector'
               scrape_interval: 10s
