--- a/.chloggen/recommedded-resource-attributes.yaml
+++ b/.chloggen/recommedded-resource-attributes.yaml
@@ -8,7 +8,7 @@ component: auto-instrumentation
 note: Update recommended resource attributes to match the [semantic conventions](https://github.com/open-telemetry/semantic-conventions/blob/main/docs/non-normative/k8s-attributes.md)
 
 # One or more tracking issues related to the change
-issues: []
+issues: [3797]
 
 # (Optional) One or more lines of additional information to render under the primary note.
 # These lines will be padded with 2 spaces and then inserted directly into the document.
