Add back the things

--- a/.github/workflows/publish-autoinstrumentation-apache-httpd.yaml
+++ b/.github/workflows/publish-autoinstrumentation-apache-httpd.yaml
@@ -3,14 +3,14 @@ name: "Publish Apache HTTPD Auto-Instrumentation"
 on:
   push:
     paths:
-      - 'autoinstrumentation/apache-httpd/**'
-      - '.github/workflows/publish-autoinstrumentation-apache-httpd.yaml'
+      - "autoinstrumentation/apache-httpd/**"
+      - ".github/workflows/publish-autoinstrumentation-apache-httpd.yaml"
     branches:
       - main
   pull_request:
     paths:
-      - 'autoinstrumentation/apache-httpd/**'
-      - '.github/workflows/publish-autoinstrumentation-apache-httpd.yaml'
+      - "autoinstrumentation/apache-httpd/**"
+      - ".github/workflows/publish-autoinstrumentation-apache-httpd.yaml"
   workflow_dispatch:
 
 concurrency:
@@ -19,6 +19,9 @@ concurrency:
 
 permissions:
   contents: read
+  packages: write
+  attestations: write
+  id-token: write
 
 jobs:
   publish:
