--- a/.github/workflows/publish-autoinstrumentation-java.yaml
+++ b/.github/workflows/publish-autoinstrumentation-java.yaml
@@ -3,23 +3,25 @@ name: "Publish Java Auto-Instrumentation"
 on:
   push:
     paths:
-      - 'autoinstrumentation/java/**'
-      - '.github/workflows/publish-autoinstrumentation-java.yaml'
+      - "autoinstrumentation/java/**"
+      - ".github/workflows/publish-autoinstrumentation-java.yaml"
     branches:
       - main
   pull_request:
     paths:
-      - 'autoinstrumentation/java/**'
-      - '.github/workflows/publish-autoinstrumentation-java.yaml'
+      - "autoinstrumentation/java/**"
+      - ".github/workflows/publish-autoinstrumentation-java.yaml"
   workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
-
 permissions:
   contents: read
+  packages: write
+  attestations: write
+  id-token: write
 
 jobs:
   publish:
