--- a/.github/workflows/publish-must-gather.yaml
+++ b/.github/workflows/publish-must-gather.yaml
@@ -2,8 +2,8 @@ name: "Publish must-gather image"
 
 on:
   push:
-    branches: [ main ]
-    tags: [ 'v*' ]
+    branches: [main]
+    tags: ["v*"]
 
   workflow_dispatch:
 
@@ -12,6 +12,9 @@ env:
 
 permissions:
   contents: read
+  packages: write
+  attestations: write
+  id-token: write
 
 jobs:
   publish:
@@ -22,7 +25,7 @@ jobs:
 
       - uses: actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b # v5.4.0
         with:
-          go-version: '~1.24.2'
+          go-version: "~1.24.2"
 
       - name: Unshallow
         run: git fetch --prune --unshallow
