--- a/.github/workflows/publish-operator-opamp-bridge.yaml
+++ b/.github/workflows/publish-operator-opamp-bridge.yaml
@@ -3,12 +3,12 @@ name: "Publish Operator OpAMP Bridge"
 on:
   push:
     paths:
-      - 'cmd/operator-opamp-bridge/**'
-      - '.github/workflows/publish-operator-opamp-bridge.yaml'
+      - "cmd/operator-opamp-bridge/**"
+      - ".github/workflows/publish-operator-opamp-bridge.yaml"
     branches:
       - main
     tags:
-      - 'v*'
+      - "v*"
   workflow_dispatch:
 
 env:
@@ -16,6 +16,9 @@ env:
 
 permissions:
   contents: read
+  packages: write
+  attestations: write
+  id-token: write
 
 jobs:
   publish:
@@ -26,7 +29,7 @@ jobs:
 
       - uses: actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b # v5.4.0
         with:
-          go-version: '~1.24.2'
+          go-version: "~1.24.2"
 
       # TODO: We're currently not using this. Should we?
       - name: Read version
