--- a/tests/e2e-ta-collector-mtls/ta-collector-mtls/00-assert.yaml
+++ b/tests/e2e-ta-collector-mtls/ta-collector-mtls/00-assert.yaml
@@ -61,7 +61,12 @@ data:
                     - prometheus
         telemetry:
             metrics:
-                address: 0.0.0.0:8888
+              readers:
+                - pull:
+                    exporter:
+                      prometheus:
+                        host: 0.0.0.0
+                        port: 8888
 kind: ConfigMap
 metadata:
   name: prometheus-cr-collector-19c94a81
