--- a/tests/e2e-targetallocator/targetallocator-kubernetessd/00-assert.yaml
+++ b/tests/e2e-targetallocator/targetallocator-kubernetessd/00-assert.yaml
@@ -37,7 +37,12 @@ data:
                     - prometheus
         telemetry:
             metrics:
-                address: 0.0.0.0:8888
+              readers:
+                - pull:
+                    exporter:
+                      prometheus:
+                        host: 0.0.0.0
+                        port: 8888
 ---
 apiVersion: apps/v1
 kind: DaemonSet
