--- a/tests/e2e-instrumentation/instrumentation-java-multicontainer/01-assert.yaml
+++ b/tests/e2e-instrumentation/instrumentation-java-multicontainer/01-assert.yaml
@@ -31,11 +31,9 @@ spec:
     - name: OTEL_EXPORTER_OTLP_ENDPOINT
       value: http://localhost:4317
     - name: OTEL_EXPORTER_OTLP_TIMEOUT
-      value: "20"
+      value: "20000"
     - name: OTEL_TRACES_SAMPLER
-      value: parentbased_traceidratio
-    - name: OTEL_TRACES_SAMPLER_ARG
-      value: "0.85"
+      value: always_on
     - name: SPLUNK_TRACE_RESPONSE_HEADER_ENABLED
       value: "true"
     - name: OTEL_SERVICE_NAME
@@ -55,6 +53,8 @@ spec:
     - name: OTEL_RESOURCE_ATTRIBUTES
     name: myapp
     volumeMounts:
+    - mountPath: /otlp
+      name: otlp-data-volume
     - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
       readOnly: true
     - mountPath: /otel-auto-instrumentation-java-myapp
@@ -81,11 +81,9 @@ spec:
     - name: OTEL_EXPORTER_OTLP_ENDPOINT
       value: http://localhost:4317
     - name: OTEL_EXPORTER_OTLP_TIMEOUT
-      value: "20"
+      value: "20000"
     - name: OTEL_TRACES_SAMPLER
-      value: parentbased_traceidratio
-    - name: OTEL_TRACES_SAMPLER_ARG
-      value: "0.85"
+      value: always_on
     - name: SPLUNK_TRACE_RESPONSE_HEADER_ENABLED
       value: "true"
     - name: OTEL_SERVICE_NAME
@@ -112,6 +110,11 @@ spec:
   - args:
     - --config=env:OTEL_CONFIG
     name: otc-container
+    volumeMounts:
+    - mountPath: /otlp
+      name: otlp-data-volume
+    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
+      readOnly: true
   initContainers:
   - name: opentelemetry-auto-instrumentation-java
 status:
