--- a/tests/e2e-instrumentation/instrumentation-java-multicontainer/01-install-app.yaml
+++ b/tests/e2e-instrumentation/instrumentation-java-multicontainer/01-install-app.yaml
@@ -16,6 +16,9 @@ spec:
         instrumentation.opentelemetry.io/inject-java: "true"
         instrumentation.opentelemetry.io/container-names: "myapp,myrabbit"
     spec:
+      volumes:
+      - name: otlp-data-volume
+        emptyDir: {}
       securityContext:
         runAsUser: 1000
         runAsGroup: 3000
@@ -23,5 +26,21 @@ spec:
       containers:
       - name: myapp
         image: ghcr.io/open-telemetry/opentelemetry-operator/e2e-test-app-java:main
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 5
+          periodSeconds: 15
+          timeoutSeconds: 2
+          failureThreshold: 3
+        volumeMounts:
+        - name: otlp-data-volume
+          mountPath: /otlp
       - name: myrabbit
         image: rabbitmq:3
