--- a/tests/e2e-instrumentation/instrumentation-java-multicontainer/02-install-app.yaml
+++ b/tests/e2e-instrumentation/instrumentation-java-multicontainer/02-install-app.yaml
@@ -16,17 +16,34 @@ spec:
         instrumentation.opentelemetry.io/inject-java: "true"
         instrumentation.opentelemetry.io/container-names: "myapp"
     spec:
+      volumes:
+      - name: otlp-data-volume
+        emptyDir: {}
       securityContext:
         runAsUser: 1000
         runAsGroup: 3000
         fsGroup: 3000
       containers:
       - name: myapp
+        ports:
+        - containerPort: 8080
         image: ghcr.io/open-telemetry/opentelemetry-operator/e2e-test-app-java:main
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
             drop: ["ALL"]
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 5
+          periodSeconds: 15
+          timeoutSeconds: 2
+          failureThreshold: 3
+        volumeMounts:
+        - name: otlp-data-volume
+          mountPath: /otlp
       - name: myrabbit
         image: rabbitmq:3
         securityContext:
