--- a/tests/e2e-instrumentation/instrumentation-java-tls/00-install-collector.yaml
+++ b/tests/e2e-instrumentation/instrumentation-java-tls/00-install-collector.yaml
@@ -3,11 +3,23 @@ kind: OpenTelemetryCollector
 metadata:
   name: simplest
 spec:
+  additionalContainers:
+  - command:
+    - sleep
+    - infinity
+    image: alpine
+    name: alpine
+    resources: {}
+    volumeMounts:
+      - name: otlp-data-volume
+        mountPath: /otlp
   volumeMounts:
     - name: certs
       mountPath: /certs
     - name: certs-ca
       mountPath: /certs-ca
+    - name: otlp-data-volume
+      mountPath: /otlp
   volumes:
     - name: certs
       secret:
@@ -15,6 +27,8 @@ spec:
     - name: certs-ca
       configMap:
         name: ca
+    - name: otlp-data-volume
+      emptyDir: {}
   config:
     receivers:
       otlp:
@@ -31,13 +45,22 @@ spec:
               cert_file: /certs/tls.crt
               key_file: /certs/tls.key
               client_ca_file: /certs-ca/ca.crt
-    processors:
+
+    processors: {}
 
     exporters:
-      debug: {}
+      debug:
+        verbosity: detailed
+      file:
+        path: /otlp/otel.json
+        flush_interval: 1s
 
     service:
       pipelines:
         traces:
           receivers: [otlp]
-          exporters: [debug]
+          exporters: [file,debug]
+        metrics:
+          receivers: [otlp]
+          exporters: [file,debug]
+ 
