--- a/.github/workflows/auto-update-agent.yaml
+++ b/.github/workflows/auto-update-agent.yaml
@@ -47,7 +47,7 @@ jobs:
                                 | sed 's/^v//')
               ;;
             python)
-              current_version=$(grep -Po "^opentelemetry-distro==\K[0-9]+\.[0-9]+\.[0-9]+" autoinstrumentation/python/requirements.txt)
+              current_version=$(grep -Po "^opentelemetry-distro==\K[0-9]+\.[0-9]+\.[0-9]+(b[0-9]+)?" autoinstrumentation/python/requirements.txt)
               latest_version=$(gh release view \
                                   --repo open-telemetry/opentelemetry-python \
                                   --json tagName \
