--- a/tests/e2e-instrumentation/instrumentation-java-multicontainer/00-install-collector.yaml
+++ b/tests/e2e-instrumentation/instrumentation-java-multicontainer/00-install-collector.yaml
@@ -16,18 +16,12 @@ spec:
     exporters:
       debug:
         verbosity: detailed
-      file:
-        path: /otlp/otel.json
-        flush_interval: 1s
 
     service:
       pipelines:
         traces:
           receivers: [otlp]
-          exporters: [file,debug]
+          exporters: [debug]
         metrics:
           receivers: [otlp]
-          exporters: [file,debug]
-  volumeMounts:
-  - name: otlp-data-volume
-    mountPath: /otlp
+          exporters: [debug]
